--- a/GradeManagement/.classpath
+++ b/GradeManagement/.classpath
@@ -7,7 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/workspace/GradeManagement/opencsv-4.3.2.jar" sourcepath="C:/Users/User/workspace/GradeManagement/opencsv-4.3.2.jar"/>
+	<classpathentry kind="lib" path="C:opencsv-4.3.2.jar" sourcepath="C:opencsv-4.3.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
